--- a/Meaghan_scrape.ipynb
+++ b/Meaghan_scrape.ipynb
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,6 +641,19 @@
     "    \n",
     "    ## append to list\n",
     "    candidates_list.append(all_articles)\n",
+    "     ##validate that df shape[0] is equal to expected query count\n",
+    "    print(\"we should expect: {} articles\".format(sum(total_count)))\n",
+    "    print(\"we have: {} articles\".format(Bernie_df.shape[0]))\n",
+    "\n",
+    "\n",
+    "    ## test 100 results theory\n",
+    "    over_100 = sum([x-100 for x in total_count if x>100 ])\n",
+    "    print(\"{} results came into query that exceeded 100 hits in a day.  Thus we lose any hit over 100 in a day\".format(over_100))\n",
+    "\n",
+    "\n",
+    "    ##unique links\n",
+    "    unique_array = Bernie_df.url.unique()\n",
+    "    print(\"we have {} unique links\".format(unique_array.shape[0]))\n",
     "    return(candidates_list)\n"
    ]
   },
@@ -656,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -664,21 +677,15 @@
      "output_type": "stream",
      "text": [
       "query will return: 20\n",
-      "query will return: 17\n",
-      "query will return: 25\n",
-      "query will return: 33\n",
-      "query will return: 24\n",
-      "query will return: 16\n",
-      "query will return: 16\n",
-      "query will return: 12\n",
-      "query will return: 9\n",
-      "query will return: 12\n",
-      "query will return: 290\n"
+      "we should expect: 20 articles\n",
+      "we have: 284 articles\n",
+      "0 results came into query that exceeded 100 hits in a day.  Thus we lose any hit over 100 in a day\n",
+      "we have 198 unique links\n"
      ]
     }
    ],
    "source": [
-    "for x in range(20,31):\n",
+    "for x in range(20,21):\n",
     "    df=hit_api(x,x+1,'Bernie OR Bernie Sanders',myString2)\n",
     "    \n",
     "## collapse list on itself to build big df\n",
@@ -798,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -839,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -869,7 +876,7 @@
    "outputs": [],
    "source": [
     "import time\n",
-    "Bernie_df.to_csv('data1'+str(time.time+'.csv')"
+    "Bernie_df.to_csv('data_'+str(time.time())+'.csv')"
    ]
   },
   {
