--- a/justin_scrape.ipynb
+++ b/justin_scrape.ipynb
@@ -596,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -606,7 +606,7 @@
     "total_count=[]\n",
     "\n",
     "# Make first call\n",
-    "def hit_api(start,end,q,myString2):\n",
+    "def hit_api(start,end,q,myString):\n",
     "    \n",
     "    ## catch bug with formatted strings for dates\n",
     "    if end < 10:\n",
@@ -621,7 +621,7 @@
     "      \n",
     "    ## API query\n",
     "    all_articles = newsapi.get_everything(q=q,\n",
-    "                                          sources=myString2,\n",
+    "                                          sources=myString,\n",
     "                                          language='en',\n",
     "                                          from_param='2019-09-{}'.format(start_str),\n",
     "                                          to='2019-09-{}'.format(end_str),\n",
@@ -641,6 +641,20 @@
     "    \n",
     "    ## append to list\n",
     "    candidates_list.append(all_articles)\n",
+    "    ##validate that df shape[0] is equal to expected query count\n",
+    "    print(\"we should expect: {} articles\".format(sum(total_count)))\n",
+    "    print(\"we have: {} articles\".format(Bernie_df.shape[0]))\n",
+    "\n",
+    "\n",
+    "    ## test 100 results theory\n",
+    "    over_100 = sum([x-100 for x in total_count if x>100 ])\n",
+    "    print(\"{} results came into query that exceeded 100 hits in a day.  Thus we lose any hit over 100 in a day\".format(over_100))\n",
+    "\n",
+    "\n",
+    "    ##unique links\n",
+    "    unique_array = Bernie_df.url.unique()\n",
+    "    print(\"we have {} unique links\".format(unique_array.shape[0]))\n",
+    "\n",
     "    return(candidates_list)\n"
    ]
   },
@@ -655,30 +669,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "query will return: 48\n",
-      "query will return: 36\n",
-      "query will return: 82\n",
-      "query will return: 130\n",
-      "query will return: 145\n",
-      "query will return: 149\n",
-      "query will return: 121\n",
-      "query will return: 72\n",
-      "query will return: 37\n",
-      "query will return: 53\n",
-      "query will return: 650\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "for x in range(20,31):\n",
-    "    df=hit_api(x,x+1,'Biden OR Joe Biden',myString2)\n",
+    "for x in range(20,21):\n",
+    "    df=hit_api(x,x+1,'Warren OR Elizabeth Warren',myString)\n",
     "    \n",
     "## collapse list on itself to build big df\n",
     "Bernie_df = pd.concat(df)\n",
@@ -708,10 +704,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "we should expect: 1523 articles\n",
-      "we have: 828 articles\n",
-      "695 results came into query that exceeded 100 hits in a day.  Thus we lose any hit over 100 in a day\n",
-      "we have 521 unique links\n"
+      "we should expect: 576 articles\n",
+      "we have: 333 articles\n",
+      "243 results came into query that exceeded 100 hits in a day.  Thus we lose any hit over 100 in a day\n",
+      "we have 224 unique links\n"
      ]
     }
    ],
@@ -741,7 +737,7 @@
     {
      "data": {
       "text/plain": [
-       "(307, 7)"
+       "(109, 7)"
       ]
      },
      "execution_count": 8,
@@ -771,7 +767,7 @@
     {
      "data": {
       "text/plain": [
-       "(828, 7)"
+       "(333, 7)"
       ]
      },
      "execution_count": 9,
@@ -796,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +813,6 @@
       "12\n",
       "13\n",
       "14\n",
-      "no words found\n",
       "15\n",
       "16\n",
       "17\n",
@@ -827,7 +822,6 @@
       "21\n",
       "22\n",
       "23\n",
-      "no words found\n",
       "24\n",
       "25\n",
       "26\n",
@@ -835,7 +829,6 @@
       "28\n",
       "29\n",
       "30\n",
-      "no words found\n",
       "31\n",
       "32\n",
       "33\n",
@@ -925,7 +918,6 @@
       "117\n",
       "118\n",
       "119\n",
-      "no words found\n",
       "120\n",
       "121\n",
       "122\n",
@@ -936,13 +928,11 @@
       "127\n",
       "128\n",
       "129\n",
-      "no words found\n",
       "130\n",
       "131\n",
       "132\n",
       "133\n",
       "134\n",
-      "no words found\n",
       "135\n",
       "136\n",
       "137\n",
@@ -961,13 +951,10 @@
       "150\n",
       "151\n",
       "152\n",
-      "no words found\n",
       "153\n",
-      "no words found\n",
       "154\n",
       "155\n",
       "156\n",
-      "no words found\n",
       "157\n",
       "158\n",
       "159\n",
@@ -1008,22 +995,18 @@
       "194\n",
       "195\n",
       "196\n",
-      "no words found\n",
       "197\n",
       "198\n",
-      "no words found\n",
       "199\n",
       "200\n",
       "201\n",
       "202\n",
       "203\n",
       "204\n",
-      "no words found\n",
       "205\n",
       "206\n",
       "207\n",
       "208\n",
-      "no words found\n",
       "209\n",
       "210\n",
       "211\n",
@@ -1045,13 +1028,11 @@
       "227\n",
       "228\n",
       "229\n",
-      "no words found\n",
       "230\n",
       "231\n",
       "232\n",
       "233\n",
       "234\n",
-      "no words found\n",
       "235\n",
       "236\n",
       "237\n",
@@ -1103,16 +1084,12 @@
       "283\n",
       "284\n",
       "285\n",
-      "no words found\n",
       "286\n",
-      "no words found\n",
       "287\n",
       "288\n",
       "289\n",
-      "no words found\n",
       "290\n",
       "291\n",
-      "no words found\n",
       "292\n",
       "293\n",
       "294\n",
@@ -1153,513 +1130,8 @@
       "329\n",
       "330\n",
       "331\n",
-      "no words found\n",
       "332\n",
-      "333\n",
-      "334\n",
-      "335\n",
-      "336\n",
-      "337\n",
-      "338\n",
-      "339\n",
-      "340\n",
-      "341\n",
-      "342\n",
-      "343\n",
-      "344\n",
-      "345\n",
-      "346\n",
-      "347\n",
-      "348\n",
-      "349\n",
-      "350\n",
-      "351\n",
-      "352\n",
-      "353\n",
-      "354\n",
-      "355\n",
-      "356\n",
-      "357\n",
-      "358\n",
-      "359\n",
-      "360\n",
-      "361\n",
-      "362\n",
-      "363\n",
-      "364\n",
-      "365\n",
-      "366\n",
-      "367\n",
-      "368\n",
-      "369\n",
-      "370\n",
-      "371\n",
-      "372\n",
-      "373\n",
-      "374\n",
-      "375\n",
-      "376\n",
-      "377\n",
-      "378\n",
-      "379\n",
-      "380\n",
-      "381\n",
-      "382\n",
-      "383\n",
-      "384\n",
-      "385\n",
-      "386\n",
-      "no words found\n",
-      "387\n",
-      "no words found\n",
-      "388\n",
-      "no words found\n",
-      "389\n",
-      "390\n",
-      "391\n",
-      "392\n",
-      "393\n",
-      "394\n",
-      "395\n",
-      "396\n",
-      "397\n",
-      "398\n",
-      "399\n",
-      "400\n",
-      "401\n",
-      "402\n",
-      "403\n",
-      "404\n",
-      "405\n",
-      "406\n",
-      "407\n",
-      "408\n",
-      "409\n",
-      "410\n",
-      "411\n",
-      "412\n",
-      "413\n",
-      "414\n",
-      "415\n",
-      "416\n",
-      "417\n",
-      "418\n",
-      "419\n",
-      "420\n",
-      "421\n",
-      "422\n",
-      "423\n",
-      "424\n",
-      "425\n",
-      "426\n",
-      "427\n",
-      "428\n",
-      "no words found\n",
-      "429\n",
-      "430\n",
-      "431\n",
-      "432\n",
-      "433\n",
-      "434\n",
-      "435\n",
-      "436\n",
-      "437\n",
-      "438\n",
-      "439\n",
-      "440\n",
-      "no words found\n",
-      "441\n",
-      "442\n",
-      "443\n",
-      "444\n",
-      "445\n",
-      "446\n",
-      "447\n",
-      "448\n",
-      "449\n",
-      "450\n",
-      "451\n",
-      "452\n",
-      "453\n",
-      "454\n",
-      "455\n",
-      "456\n",
-      "457\n",
-      "458\n",
-      "459\n",
-      "460\n",
-      "461\n",
-      "462\n",
-      "463\n",
-      "464\n",
-      "465\n",
-      "466\n",
-      "467\n",
-      "468\n",
-      "469\n",
-      "470\n",
-      "471\n",
-      "472\n",
-      "473\n",
-      "474\n",
-      "475\n",
-      "476\n",
-      "477\n",
-      "478\n",
-      "479\n",
-      "480\n",
-      "481\n",
-      "482\n",
-      "no words found\n",
-      "483\n",
-      "no words found\n",
-      "484\n",
-      "no words found\n",
-      "485\n",
-      "486\n",
-      "no words found\n",
-      "487\n",
-      "488\n",
-      "489\n",
-      "490\n",
-      "491\n",
-      "492\n",
-      "493\n",
-      "494\n",
-      "495\n",
-      "496\n",
-      "497\n",
-      "498\n",
-      "499\n",
-      "500\n",
-      "501\n",
-      "502\n",
-      "503\n",
-      "504\n",
-      "505\n",
-      "506\n",
-      "507\n",
-      "508\n",
-      "509\n",
-      "510\n",
-      "511\n",
-      "no words found\n",
-      "512\n",
-      "513\n",
-      "514\n",
-      "515\n",
-      "516\n",
-      "517\n",
-      "518\n",
-      "519\n",
-      "520\n",
-      "521\n",
-      "522\n",
-      "523\n",
-      "524\n",
-      "525\n",
-      "526\n",
-      "527\n",
-      "528\n",
-      "529\n",
-      "530\n",
-      "531\n",
-      "532\n",
-      "533\n",
-      "534\n",
-      "535\n",
-      "536\n",
-      "537\n",
-      "538\n",
-      "539\n",
-      "540\n",
-      "541\n",
-      "542\n",
-      "543\n",
-      "544\n",
-      "545\n",
-      "546\n",
-      "547\n",
-      "548\n",
-      "549\n",
-      "550\n",
-      "551\n",
-      "552\n",
-      "553\n",
-      "554\n",
-      "555\n",
-      "556\n",
-      "557\n",
-      "558\n",
-      "559\n",
-      "560\n",
-      "561\n",
-      "562\n",
-      "563\n",
-      "564\n",
-      "565\n",
-      "566\n",
-      "567\n",
-      "568\n",
-      "569\n",
-      "570\n",
-      "571\n",
-      "no words found\n",
-      "572\n",
-      "573\n",
-      "no words found\n",
-      "574\n",
-      "575\n",
-      "576\n",
-      "577\n",
-      "578\n",
-      "579\n",
-      "580\n",
-      "581\n",
-      "582\n",
-      "583\n",
-      "584\n",
-      "585\n",
-      "586\n",
-      "no words found\n",
-      "587\n",
-      "588\n",
-      "589\n",
-      "590\n",
-      "591\n",
-      "592\n",
-      "593\n",
-      "594\n",
-      "595\n",
-      "596\n",
-      "597\n",
-      "598\n",
-      "599\n",
-      "600\n",
-      "601\n",
-      "602\n",
-      "603\n",
-      "604\n",
-      "605\n",
-      "606\n",
-      "607\n",
-      "608\n",
-      "609\n",
-      "610\n",
-      "611\n",
-      "612\n",
-      "613\n",
-      "614\n",
-      "615\n",
-      "616\n",
-      "617\n",
-      "618\n",
-      "619\n",
-      "620\n",
-      "621\n",
-      "622\n",
-      "623\n",
-      "624\n",
-      "625\n",
-      "626\n",
-      "627\n",
-      "628\n",
-      "629\n",
-      "630\n",
-      "631\n",
-      "632\n",
-      "633\n",
-      "634\n",
-      "635\n",
-      "no words found\n",
-      "636\n",
-      "637\n",
-      "638\n",
-      "639\n",
-      "640\n",
-      "641\n",
-      "642\n",
-      "643\n",
-      "644\n",
-      "645\n",
-      "646\n",
-      "647\n",
-      "648\n",
-      "649\n",
-      "650\n",
-      "651\n",
-      "no words found\n",
-      "652\n",
-      "653\n",
-      "654\n",
-      "655\n",
-      "656\n",
-      "657\n",
-      "658\n",
-      "659\n",
-      "660\n",
-      "661\n",
-      "662\n",
-      "663\n",
-      "664\n",
-      "665\n",
-      "666\n",
-      "667\n",
-      "668\n",
-      "669\n",
-      "670\n",
-      "671\n",
-      "672\n",
-      "673\n",
-      "no words found\n",
-      "674\n",
-      "675\n",
-      "676\n",
-      "677\n",
-      "678\n",
-      "679\n",
-      "680\n",
-      "681\n",
-      "682\n",
-      "683\n",
-      "684\n",
-      "685\n",
-      "686\n",
-      "687\n",
-      "688\n",
-      "689\n",
-      "690\n",
-      "691\n",
-      "692\n",
-      "693\n",
-      "694\n",
-      "695\n",
-      "696\n",
-      "697\n",
-      "698\n",
-      "699\n",
-      "700\n",
-      "701\n",
-      "702\n",
-      "703\n",
-      "704\n",
-      "705\n",
-      "706\n",
-      "707\n",
-      "708\n",
-      "709\n",
-      "710\n",
-      "711\n",
-      "712\n",
-      "713\n",
-      "714\n",
-      "715\n",
-      "716\n",
-      "717\n",
-      "718\n",
-      "719\n",
-      "720\n",
-      "721\n",
-      "722\n",
-      "723\n",
-      "724\n",
-      "725\n",
-      "726\n",
-      "727\n",
-      "728\n",
-      "729\n",
-      "730\n",
-      "731\n",
-      "732\n",
-      "733\n",
-      "734\n",
-      "735\n",
-      "736\n",
-      "737\n",
-      "738\n",
-      "739\n",
-      "740\n",
-      "741\n",
-      "742\n",
-      "743\n",
-      "744\n",
-      "745\n",
-      "746\n",
-      "747\n",
-      "748\n",
-      "749\n",
-      "750\n",
-      "751\n",
-      "752\n",
-      "753\n",
-      "754\n",
-      "755\n",
-      "756\n",
-      "757\n",
-      "758\n",
-      "759\n",
-      "760\n",
-      "761\n",
-      "762\n",
-      "763\n",
-      "764\n",
-      "765\n",
-      "766\n",
-      "767\n",
-      "768\n",
-      "769\n",
-      "770\n",
-      "771\n",
-      "772\n",
-      "773\n",
-      "774\n",
-      "775\n",
-      "776\n",
-      "777\n",
-      "778\n",
-      "779\n",
-      "780\n",
-      "781\n",
-      "782\n",
-      "783\n",
-      "784\n",
-      "no words found\n",
-      "785\n",
-      "786\n",
-      "787\n",
-      "788\n",
-      "789\n",
-      "790\n",
-      "791\n",
-      "792\n",
-      "793\n",
-      "794\n",
-      "795\n",
-      "796\n",
-      "797\n",
-      "798\n",
-      "799\n",
-      "800\n",
-      "801\n",
-      "802\n",
-      "803\n",
-      "804\n",
-      "805\n",
-      "806\n",
-      "807\n",
-      "808\n",
-      "809\n",
-      "810\n",
-      "811\n",
-      "812\n",
-      "813\n",
-      "814\n",
-      "815\n",
-      "816\n",
-      "817\n",
-      "818\n",
-      "819\n",
-      "820\n"
+      "333\n"
      ]
     }
    ],
@@ -1704,7 +1176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1720,16 +1192,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0     One of former Vice President Joe Biden’s top d...\n",
+       "1     Cedar Rapids, Iowa (CNN) Sen. Elizabeth Warren...\n",
+       "2     Sarah Isgur is a CNN political analyst. She ha...\n",
+       "3     Despite 2020 Democrat presidential primary can...\n",
+       "4     (CNN) Democratic Rep. Joe Kennedy III of Massa...\n",
+       "5     (CNN) House Speaker Nancy Pelosi slammed the T...\n",
+       "6     (CNN) Billionaire Robert Smith has made good o...\n",
+       "7     Sen. Elizabeth Warren (D-MA) is rising in Cali...\n",
+       "8     Senator Chris Coons (D-DE) on Friday discussed...\n",
+       "9     Sen. Bernie Sanders (I-VT) responded to a lett...\n",
+       "10    Rep. Joe Kennedy III (D-MA) formally announced...\n",
+       "11    Sen. Bernie Sanders (I-VT) is joining striking...\n",
+       "12    Presidential candidate Andrew Yang (D) has the...\n",
+       "13    Several 2020 Democrats expressed support for s...\n",
+       "14    Sen. Cory Booker (D-NJ) told HuffPost in an in...\n",
+       "15    Activists across over 150 countries are partic...\n",
+       "16    Several hundred Tea Party activists gathered T...\n",
+       "17    Sen. Kamala Harris (D-CA) is beefing up resour...\n",
+       "18    Dean Obeidallah, a former attorney, is the hos...\n",
+       "19    Chat with us in Facebook Messenger. Find out w...\n",
+       "Name: full_art, dtype: object"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "Bernie_df[:20]['full_art']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1748,9 +1251,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1571550604.3020012"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "time.time()"
    ]
