--- a/Literature_Review/LiteratureReview_vks2.Rmd
+++ b/Literature_Review/LiteratureReview_vks2.Rmd
@@ -6,7 +6,6 @@ output:
   html_document: default
   pdf_document: default
 ---
-
 ## Research Question: 
 
 Do publications negatively portray certain candidates more than other candidates?
@@ -20,33 +19,22 @@ and quantifying these biases.
 
 Many researchers have grappled with the difficulty of precisely measuring or documenting bias,
 including Sutter [1]. Sutter compares bias in universities versus for-profit organizations.
-He concludes that incentives for bias in academic
-settings are of quite different than those in commercial settings. He advocates a number of
-suggestions to mitigate this bias, taking into account the stakeholders in academia and 
+He concludes that incentives for bias in academic settings are of quite different than those in commercial settings. He advocates a few suggestions to mitigate this bias, considering the stakeholders in academia and 
 their own incentives in mitigating or promoting bias.
 
 ### Causes of Bias
 
-A number of papers, e.g. Sutter [1] and Baron [2], focus on the factors that cause
-and sustain political bias. 
-Sutter [1] compares the incentives for bias in universities versus those in for-profit
-organizations, and concludes that the forces that sustain bias in academic work
-are of a different nature than those that result in bias in commercial organizations. Since
-the stakeholders and accountability structures are vastly different between these categories, this
-is to be expected.
+Several papers, such as Sutter [1] and Baron [2], focus on the factors that propagate
+political biases. Sutter [1] compares the incentives for bias in universities versus those in for-profit
+organizations. He concludes that the forces that sustain bias in academia differ than those in commercial organizations since the stakeholders and accountability structures are vastly different. 
 
-For Bernhardt [3], media bias is quite simply a result of partisan preference for biased news.
-Baron [2] concludes that journalistic bias tends to lower subscription
-prices, and therefore is sustainable only if it allows hiring of journalists at a lower wage.
-Gentzkow et al [5] divide the causes of bias into supply-side and demand-side categories. 
-Supply-side causes are related to the production of news media, such as practices of 
-management or labor in news media organizations. Demand-side causes are those originating from
-consumers' perceptions and preferences.
+For Bernhardt [3], media bias is a result of the general public’s preference for “partisan” or biased news.
+Baron [2] concludes that news bias is a self-perpetuating cycle where journalistic biases lower subscription
+prices, forcing the news organization to survive only by hiring and paying journalists lower wages. 
 
-For bias to persist, there must be factors that sustain, or even strengthen it.
-The task of identifying factors that sustain bias across the adaptive and dynamic
-environment of news media organizations is the focus of papers such as Sutter [1], Baron [2],
-Bernhardt [3], Baum and Groeling [4].
+Gentzkow et al [5] aligns the causation of political bias to the production and dissemination of news: supply-side and demand-side, respectively. The supply-side biases can be attributed to the production of news media content, such as practices of management or labor in news media organizations. The demand-side biases originate and perpetuate from consumers' perceptions and preferences.
+
+For bias to persist, there must be factors that sustain, or even strengthen it. The task of identifying factors that sustain bias across the adaptive and dynamic environment of news media organizations is the focus of papers such as Sutter [1], Baron [2], Bernhardt [3], Baum and Groeling [4].
 
 Sutter [1] suggests that journalism, the main transmission engine for ideas and information in
 society, is inherently subjective and often reflects the opinions of the journalist and/or news
