--- a/Literature_Review/Literature_Review.Rmd
+++ b/Literature_Review/Literature_Review.Rmd
@@ -1,41 +1,133 @@
 ---
 title: "LiteratureReview"
 author: "Meaghan Burke, Justin Herman, Vikas Sinha, Joseph Garcia"
-date: "October 10, 2019"
+date: "October 19, 2019"
 output:
   pdf_document: default
   html_document: default
 ---
-
 ## Research Question: 
 
 Do publications negatively portray certain candidates more than other candidates?
 
-### Literature Review
 
-Our capstone project aims to measure bias in news media coverage for the candidates in the United States 2020 Democratic Presidential Primary. The Literature Review section focus on a selection of published literature and analyses that define political bias and identify ways of measuring and quantifying these biases. 
-
-Sutter [1] suggests that journalism, the main transmission engine for ideas and information in society, is inherently subjective and often reflects the opinions of the journalist and/or news outlet. However, the evidence to prove the existence of bias is circumstantial, making the measurement and quantification of these biases is very difficult. Sutter notes that revenue is a controlling force for limiting or reducing bias in privately owned news media organizations. He argues that the inclusion of too much bias in reporting can adversely affect the readership and advertising revenue for the news organizations.
-
-Like Sutter, Baron [2] submits that profit-maximizing, competitive pressures, consumer preferences, and the general economic and financial landscapes impact the role of bias in news media. Unlike Sutter, Baron theorizes that there are strong correlations between political biases and consumer expectations, operational costs, and the ideological alignment of the employed journalists. Baron's findings show that several forces combine to ensure the presence and prevalence of unbalanced reporting.
-
-Bernhardt [3] also suggests that profit-maximization may influence a news media outlet to cater to a more partisan audience by suppressing or doctoring some pertinent information in its news reporting. The model examines the undesirable "electoral mistakes" that are generated from the existence of media bias. Bernhardt cautions that the impact of media bias is more powerful and determinative than commonly presumed, since its effect cannot be nullified, even to a rational consumer.
-
-Baum and Groeling [4] submits that the advent of internet media removed the professional editorial process from news content. The new "partisan" styled editorial system of internet news paired with the public's adoption of the internet, produced a more fragmented audience. Baum and Groeling's study found that left-skewed and right-skewed political biases exist in internet news media. This shift from bipartisan to partisan coverage has important implications for political discourse in America and may impact the decision making for many Americans.
-
-Gentzkow and Shapiro [5] examine the accuracy and trust in media. The paper explains how different media outlets select, discuss and present facts in ways that tend to systematically favor one side of the political spectrum. These biases can be a result from a multitude of different media components. Supply-side bias persists when media management or labor are willing to sacrifice profits for political gain. Demand-side bias persists when consumers perceive biased media to be more informative or more enjoyable. Like Baum and Groeling, Gentzkow and Shapiro believe these differences can have large effects on voter behavior, public perception and political outcomes. However, it is very difficult to determine the measured impact of these biases. 
-
-Stone [6] presents the counterintuitive thesis that bias can be more prevalent in certain competitive media markets than in some less competitive ones. Stone presents formal proof that consumers can, for example, be less informed in some media duopolies than in some monopolies. Thus, one must guard against simplistic prescriptions on how to counter bias, since its correlations with market conditions can be contrary to intuition.
-
-Sheth [7] proposes a model for measuring the ideological bias in news coverage by mainstream media outlets. Terms in the news articles are classified based on detected political affiliations: pro-conservative, anti-conservative, pro-liberal and anti-liberal. Once classified, the model detects the overall measurement of political bias in each article. Sheth's initial findings are that media coverage is broadly anti-conservative. The model also concludes that the news outlets, regardless of political affiliations, are resoundingly negative and critical of the opposition instead of championing its respective candidates. The Sheth model findings align with the general public's perception of media bias. 
-
-Lin, Bagrow and Lazer [8] propose a method of quantifying bias in both traditional news media and internet blogs. The method primarily compares the number of media references to members of the United States congress. This method helps reduce errors due to subjective criteria, such as sentiment or degrees of bias. The presented method can also account for the variance in bias over time. By measuring the links between blogs and ideologically opposing media outlets, Lin, Bagrow and Lazer prove that internet blogs are, "more social" as they are more connected and consequently more influenced by site connections. Being more connected makes the internet blogs more "exogenous", or more influenced by external factors, such as election cycles.
-
-Oconnor, Balasubramanyan, Routledge and Smith [9] test how well twitter sentiment correlates with consumer confidence, presidential and election polling data. The highlighted sentiment analysis model uses a lexicon from OpinionFinder on a tailored subset of twitter data relating to several political topics in between the years 2008 and 2009. The topics include key words such as jobs, Obama, McCain, etc. The model calculates a sentiment score based on the ratio of positive to negative words. Smoothing averages techniques remove sentiment score noise and can help to determine correlation.  Oconnor, Balasubramanyan, Routledge and Smith note that techniques like stemming caused dangerous misclassification over the model's lexicon but did not substantially affect the aggregated scoring composites.  The model proved effective with predicting economic indicators, but exhibited difficulty predicting the presidential approval polls.          
-
-Groceclose and Milyo [10] find that major media outlets exhibit significant liberal bias. The referenced model calculates an ADA, Americans of Democratic Action, score for various news outlets across the political spectrum. Traditionally, the ADA is a liberal political organization that advocates for progressive policies. In Groceclose and Milyo's research, ADA is coterminous with political slant or liberal affiliation. The ADA score is calculated from the number of times the news media outlet cites various think tanks in articles compared against the number of times congress cites the same think tanks in congressional speeches.  The citation patterns frequency determines the news media outlet's political slant. In the study, editorials or traditional opinionated pieces are omitted as these pieces intend to exhibit biased reporting. Ultimately, Groceclose and Milyo found that the majority of news media outlets examined were much closer to the average democrat in congress. 
+Our capstone project aims to measure bias in news media coverage for the candidates in the United
+States 2020 Democratic Presidential Primary. The Literature Review section focuses on a selection
+of published literature and analyses that define political bias and identify ways of measuring
+and quantifying these biases. 
 
 
+### Causes of Bias
+
+Several papers, such as Sutter [1] and Baron [2], focus on the factors that propagate
+political biases. Sutter [1] compares the incentives for bias in universities versus those in for-profit
+organizations. He concludes that the forces that sustain bias in academia differ than those in commercial 
+organizations since the stakeholders and accountability structures are vastly different. 
+
+For Bernhardt [3], media bias is a result of the general public’s preference for “partisan” or biased news.
+Baron [2] concludes that news bias is a self-perpetuating cycle where journalistic biases lower subscription
+prices, forcing the news organization to survive only by hiring and paying journalists lower wages. 
+
+Gentzkow et al [5] aligns the causation of political bias to the production and dissemination of news: supply-side
+and demand-side, respectively. The supply-side biases can be attributed to the production of news media content,
+such as practices of management or labor in news media organizations. The demand-side biases originate and perpetuate
+from consumers' perceptions and preferences.
+
+For bias to persist, there must be factors that sustain, or even strengthen it. The task of identifying factors
+that sustain bias across the adaptive and dynamic environment of news media organizations is the focus of papers 
+such as Sutter [1], Baron [2], Bernhardt [3], Baum and Groeling [4].
+
+Sutter [1] suggests that journalism, the main transmission engine for ideas and information in
+society, is inherently subjective and often reflects the opinions of the journalist and/or news
+outlet. However, the evidence to prove the existence of bias is circumstantial, making the
+measurement and quantification of these biases very difficult. Sutter notes that revenue is
+a controlling force for limiting or reducing bias in privately-owned news media organizations.
+He argues that the inclusion of too much bias in reporting can adversely affect the readership
+and advertising revenue for the news organizations.
+
+Like Sutter, Baron [2] submits that profit-maximizing, competitive pressures, consumer
+preferences, and the general economic and financial landscapes impact the role of bias
+in news media. Unlike Sutter, Baron theorizes that there are strong correlations between
+political biases and consumer expectations, operational costs, and the ideological alignments
+of the employed journalists. Baron's findings show that several forces combine to ensure
+the presence and prevalence of unbalanced reporting.
+
+Bernhardt [3] also suggests that profit-maximization may influence a news media outlet to
+cater to a more partisan audience by suppressing or doctoring some pertinent information in
+its news reporting. 
+
+Baum and Groeling [4] submits that the advent of internet media removed the professional editorial
+process from news content. The new "partisan" styled editorial system of internet news, paired
+with the public's adoption of the internet, produced a more fragmented audience.
+
+
+### Consequences of Bias
+
+Several authors explain the different ways that political bias causes harm.
+Bernhardt [3] cautions that the impact of media bias is more powerful and
+determinative than commonly presumed, since its effect cannot be nullified, even to a rational
+consumer.
+Baum and Groeling's [4] study found that left-skewed and right-skewed political biases exist in
+internet news media. This shift from bipartisan to partisan coverage has important implications
+for political discourse in America and may impact the decision making for many Americans.
+
+Like Baum and Groeling, Gentzkow and Shapiro [5] believe that media bias can have large effects on
+voter behavior, public perception and political outcomes. However, it is very difficult to
+determine the actual impact of these biases.
+
+Stone [6] presents the counterintuitive thesis that bias can be more prevalent in certain
+competitive media markets than in some less competitive ones. Stone presents formal proof
+that consumers can, for example, be less informed in some media duopolies than in some
+monopolies. Thus, one must guard against simplistic prescriptions on how to counter bias,
+since its correlations with market conditions can be contrary to intuition.
+
+Sheth's [7] initial findings are that media coverage is broadly anti-conservative. His model
+also concludes that the news outlets, regardless of political affiliations, are resoundingly
+negative and critical of the opposition instead of championing its respective candidates.
+The Sheth model findings align with the general public's perception of media bias.
+
+Lin, Bagrow and Lazer [8] prove that internet blogs are, more "social" as they are more connected
+and consequently more influenced by site connections. Being more connected makes the internet
+blogs more "exogenous", or more influenced by external factors, such as election cycles.
+
+
+### Measuring Bias
+
+Many researchers have grappled with the difficulty of precisely measuring or documenting bias.
+A number of papers, such as Sheth[7], Lin [8], and O'Connor [9], focus on the problem of quantifying
+media bias in networks, and present models that can be used to quantify political bias.
+
+Sheth [7] proposes a model for measuring ideological bias in news coverage by mainstream media
+outlets. Terms in the news articles are classified based on detected political affiliations:
+pro-conservative, anti-conservative, pro-liberal and anti-liberal. Once classified, the model
+detects the overall measurement of political bias in each article.
+
+Lin, Bagrow and Lazer [8] propose a method of quantifying bias in both traditional news media and
+internet blogs. The method primarily compares the number of media references to members of the
+United States congress. This method helps reduce errors due to subjective criteria, such as
+sentiment or degrees of bias. The presented method can also account for the variance in bias
+over time. 
+
+O'Connor, Balasubramanyan, Routledge and Smith [9] test how well Twitter sentiment correlates
+with consumer confidence, presidential and election polling data. The highlighted sentiment
+analysis model uses a lexicon from OpinionFinder on a tailored subset of Twitter data relating
+to several political topics between the years 2008 and 2009. The topics include key words such
+as "jobs", "Obama", "McCain", etc. The model calculates a sentiment score based on the ratio of
+positive to negative words. Smoothing averages techniques remove sentiment score noise and can
+help to determine correlation.  O'Connor, Balasubramanyan, Routledge and Smith note that
+techniques like stemming caused dangerous misclassification over the model's lexicon, but
+did not substantially affect the aggregated scoring composites.  The model proved effective
+with predicting economic indicators, but exhibited difficulty predicting the presidential
+approval polls.          
+
+The model described by Groseclose and Milyo [10] calculates an ADA (Americans for Democratic Action)
+score for various news outlets across the political spectrum.
+In Groseclose and Milyo's research, ADA is coterminous with political slant or
+liberal affiliation. The ADA score is calculated from the number of times the news media
+outlet cites various think-tanks in articles, compared against the number of times Congress
+cites the same think-tanks in Congressional speeches.  The citation patterns frequency
+determines the news media outlet's political slant. In the study, editorials or traditional
+opinionated pieces are omitted as these pieces intend to exhibit biased reporting. 
 
 
 ### References
