--- a/my_barebones_scraper.ipynb
+++ b/my_barebones_scraper.ipynb
@@ -1096,6 +1096,118 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "my_df=pd.read_csv('Vikas.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Unnamed: 0', 'Unnamed: 0.1', 'author', 'content', 'description',\n",
+       "       'publishedAt', 'source', 'title', 'url', 'full_art'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0       “Young people are constantly signaling what’s ...\n",
+       "1       WASHINGTON — For months this spring and summer...\n",
+       "2       WASHINGTON — President Trump pressed the Ukrai...\n",
+       "3       WASHINGTON — President Trump on Saturday dismi...\n",
+       "4       Though he has yet to call for impeachment proc...\n",
+       "5       Why is this coming up now?\\r\\r\\n\\r\\r\\nAn intel...\n",
+       "6       CEDAR RAPIDS, Iowa — Former Vice President Jos...\n",
+       "7       “Some government lawyer would be nervous to do...\n",
+       "8       Will this fine-tuning be enough in an agitated...\n",
+       "9       President Trump in a July phone call repeatedl...\n",
+       "10      Kamala Harris’s campaign says she is focusing ...\n",
+       "11      President Trump pressed on with calls for an i...\n",
+       "12      WASHINGTON — Everyone here is keyed up for the...\n",
+       "13      To the Editor:\\r\\r\\n\\r\\r\\nRe “Claim on Trump I...\n",
+       "14      WASHINGTON—Elizabeth Warren is building a broa...\n",
+       "15      Presidents these days always seem to get worse...\n",
+       "16      On Thursday, Mr. Atkinson appeared before a me...\n",
+       "17      Mayor Pete Buttigieg of South Bend, Ind., plac...\n",
+       "18      Mr. Schiff, speaking on CNN’s “State of the Un...\n",
+       "19      A new poll from The Des Moines Register and CN...\n",
+       "20      The story of Donald Trump’s phone call to Ukra...\n",
+       "21      Democratic presidential candidates are present...\n",
+       "22      Listen and subscribe to our podcast from your ...\n",
+       "23      WASHINGTON — The last time he was accused of c...\n",
+       "24      He is still doing some campaigning as it used ...\n",
+       "25      WASHINGTON—For weeks, lawmakers of both partie...\n",
+       "26      Nobody is arguing that the Bidens are in the s...\n",
+       "27      KIEV, Ukraine — Senior Ukrainian officials sai...\n",
+       "28      To the Editor:\\r\\r\\n\\r\\r\\nRe “Trump Admits He ...\n",
+       "29      The prosecutor general, Viktor Shokin, was soo...\n",
+       "                              ...                        \n",
+       "2161    Former Vice President and 2020 candidate Joe B...\n",
+       "2162    Washington (CNN) President Donald Trump has sp...\n",
+       "2163    Joe Biden’s top political donors gathered for ...\n",
+       "2164    During an appearance on Fox News Channel’s “Ju...\n",
+       "2165    On Friday’s broadcast of HBO’s “Real Time,” ho...\n",
+       "2166    Former Vice President Joe Biden’s son, Hunter ...\n",
+       "2167    On Thursday’s broadcast of CNN’s town hall on ...\n",
+       "2168    Sunday during an appearance on CNN’s “Newsroom...\n",
+       "2169    \"Real Time\" host Bill Maher took aim at Democr...\n",
+       "2170    Rep. Joe Kennedy III, D-Mass., announced Satur...\n",
+       "2171    A Florida smoke shop owner was murdered during...\n",
+       "2172    John Bolton had to know he was sending a messa...\n",
+       "2173    The high-tax policy ideas of progressive Democ...\n",
+       "2174    Facebook CEO Mark Zuckerberg committed to trea...\n",
+       "2175    \"The Five\" discussed presidential candidate Jo...\n",
+       "2176    Presidential hopeful Sen. Elizabeth Warren pro...\n",
+       "2177    Democratic presidential candidate Sen. Elizabe...\n",
+       "2178    Sen. Elizabeth Warren, D-Mass., said she is co...\n",
+       "2179    Democratic presidential candidate Elizabeth Wa...\n",
+       "2180    (CNN) Democratic Rep. Joe Kennedy III of Massa...\n",
+       "2181    (CNN) House Speaker Nancy Pelosi slammed the T...\n",
+       "2182    (CNN) Billionaire Robert Smith has made good o...\n",
+       "2183    Rep. Joe Kennedy III (D-MA) formally announced...\n",
+       "2184    00:00\\r\\r\\n\\r\\r\\nA SENIOR ADVISOR. SARAH, LET ...\n",
+       "2185    (CNN) Rep. Alexandria Ocasio-Cortez never hid ...\n",
+       "2186    Washington (CNN Business) Facebook ( FB ) CEO ...\n",
+       "2187    Washington (CNN) Joe Biden has long wanted not...\n",
+       "2188    New York (CNN Business) Is the market's love a...\n",
+       "2189    Washington (CNN) Democratic Sen. Cory Booker, ...\n",
+       "2190    (CNN) Joe Biden's presidential campaign says P...\n",
+       "Name: full_art, Length: 2191, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "my_df[\"full_art\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
